[package]
authors = ["Jason Ozias <jason.ozias@kroger.com>"]
categories = ["algorithms", "cryptography"]
description = "An implementation of Shamir's Secret Sharing Scheme"
documentation = "http://docs.rs/ssss"
edition = "2021"
homepage = "http://docs.rs/ssss"
keywords = ["cryptography", "secret", "shamir"]
license = "MIT OR Apache-2.0"
name = "ssss"
readme = "README.md"
repository = "https://github.com/rustyhorde/sss.git"
version = "0.1.1"

[package.metadata.cargo-all-features]
denylist = ["arbitrary"]

[features]
fuzz = ["arbitrary"]
unstable = []

[dependencies]
arbitrary = { version = "1.3.0", optional = true, features = ["derive"] }
anyhow = "1.0.71"
getset = "0.1.2"
num-bigint = "0.4.3"
num-traits = "0.2.15"
num-integer = "0.1.45"
rand = "0.8.5"
serde = { version = "1.0.162", features = ["derive"] }
thiserror = "1.0.40"

[build-dependencies]
rustversion = "1.0.12"
