[package]
authors = ["Jason Ozias <jason.ozias@kroger.com>"]
categories = ["algorithms", "cryptography"]
description = "An implementation of Shamir's Secret Sharing Scheme"
documentation = "http://docs.rs/ssss"
edition = "2024"
homepage = "http://docs.rs/ssss"
keywords = ["cryptography", "secret", "shamir"]
license = "MIT OR Apache-2.0"
name = "ssss"
readme = "README.md"
repository = "https://github.com/rustyhorde/sss.git"
version = "1.0.4"
rust-version = "1.85.1"

[features]
fuzz = ["arbitrary"]
unstable = []

[dependencies]
arbitrary = { version = "1.4.2", optional = true, features = ["derive"] }
anyhow = "1.0.100"
bon = "3.8.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
num-integer = "0.1.46"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[build-dependencies]
rustversion = "1.0.22"
