
[package]
name = "ssss-fuzz"
version = "0.0.0"
authors = ["Jason Ozias <jason.ozias@kroger.com>"]
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = "1.4.2"
libfuzzer-sys = { version = "0.4.13", features = ["arbitrary-derive"] }
ssss = { path = "..", features = ["fuzz"] }

# Build the fuzz targets with line-table debug info so libFuzzer crash
# reports carry usable symbolicated backtraces.
[profile.release]
debug = 1

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "config"
path = "fuzz_targets/config.rs"
test = false
doc = false

[[bin]]
name = "gen_shares"
path = "fuzz_targets/gen_shares.rs"
test = false
doc = false

[[bin]]
name = "unlock"
path = "fuzz_targets/unlock.rs"
test = false
doc = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false

# Regression tests replay previously-found crash inputs through plain `cargo test`
# (not libFuzzer), so fixed bugs stay fixed. Run with `cargo test` in this dir.
[[test]]
name = "regression_unlock"
path = "fuzz_targets/regression_unlock.rs"